[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/card/Card.gd" type="Script" id=1]
[ext_resource path="res://assets/card/green_circle.png" type="Texture" id=2]
[ext_resource path="res://assets/card/big_three.png" type="Texture" id=3]
[ext_resource path="res://assets/card/blue_card.png" type="Texture" id=4]
[ext_resource path="res://assets/card/white_circle.png" type="Texture" id=5]
[ext_resource path="res://assets/card/blue_gem.png" type="Texture" id=6]
[ext_resource path="res://assets/card/small_one.png" type="Texture" id=7]
[ext_resource path="res://assets/card/small_two.png" type="Texture" id=8]
[ext_resource path="res://assets/card/small_three.png" type="Texture" id=9]
[ext_resource path="res://assets/card/small_four.png" type="Texture" id=10]
[ext_resource path="res://assets/card/red_circle.png" type="Texture" id=11]
[ext_resource path="res://assets/card/blue_circle.png" type="Texture" id=12]

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="base" type="Sprite" parent="."]
position = Vector2( 104, 60 )
texture = ExtResource( 4 )

[node name="gem" type="Sprite" parent="."]
position = Vector2( 111, 43 )
texture = ExtResource( 6 )

[node name="points" type="Sprite" parent="."]
position = Vector2( 93, 43 )
texture = ExtResource( 3 )

[node name="cost1_base" type="Sprite" parent="."]
position = Vector2( 93, 77 )
texture = ExtResource( 11 )

[node name="cost1_tokens" type="Sprite" parent="cost1_base"]
position = Vector2( -1, 1 )
texture = ExtResource( 9 )

[node name="cost2_base" type="Sprite" parent="."]
position = Vector2( 93, 67 )
texture = ExtResource( 5 )

[node name="cost2_tokens" type="Sprite" parent="cost2_base"]
position = Vector2( 0, 1 )
texture = ExtResource( 7 )

[node name="cost3_base" type="Sprite" parent="."]
position = Vector2( 102, 77 )
texture = ExtResource( 12 )

[node name="cost3_tokens" type="Sprite" parent="cost3_base"]
position = Vector2( 0, 1 )
texture = ExtResource( 10 )

[node name="cost4_base" type="Sprite" parent="."]
position = Vector2( 103, 67 )
texture = ExtResource( 2 )

[node name="cost4_tokens" type="Sprite" parent="cost4_base"]
position = Vector2( 0, 1 )
texture = ExtResource( 8 )
